# libts3query

./: .gitignore  CMakeLists.txt  README.md
examples/clientlist/: Makefile  main.cpp
src/: ts3query.hpp
src/base/: TS3Object.hpp
src/communication/: TS3Command.cpp  TS3Command.hpp  TS3Response.cpp  TS3Response.hpp  TS3ResponseValue.cpp  TS3ResponseValue.hpp
src/connection/: TS3ServerConnection.cpp  TS3ServerConnection.hpp
src/connection/transport/: NetworkTools.cpp  NetworkTools.hpp  TS3BaseTransport.cpp  TS3BaseTransport.hpp  TelnetTransport.cpp  TelnetTransport.hpp
src/error/: TS3Error.cpp  TS3Error.hpp  TS3LogicError.cpp  TS3LogicError.hpp  TS3TransportError.cpp  TS3TransportError.hpp
test/: gtest_main.cpp
test/communication/: TS3Command_test.hpp  TS3ResponseValue_test.hpp  TS3Response_test.hpp
test/connection/: TS3ServerConnection_test.hpp
test/connection/transport/: NetworkTools_test.hpp  TransportMock.hpp
